# timetable

./: Cargo.toml  index.html
.perseus/: bundle.js  bundle.wasm
.perseus/page/xx-XX/: .json  index.json  readme.json
.perseus/static/styles/: tailwind.css
readme/: index.html
utils/: Cargo.toml
utils/src/: lib.rs
website/: .gitignore  Cargo.toml  gh-pages.js  package-lock.json  package.json  readme.md  tailwind.config.cjs
website/src/: error_pages.rs  main.rs
website/src/templates/: index.rs  mod.rs  readme.rs
website/static/styles/: tailwind.css
